Fixed pills to display behind navbar when scrolling

--- a/src/components/Shared/Movie/Movie.css
+++ b/src/components/Shared/Movie/Movie.css
@@ -34,3 +34,6 @@
 
 }
 
+.grow{
+    -webkit-transform: none;
+}
